# tt-flashbots-worktest

./: .env.example  .gitignore  CONCLUSIONS.md  DATA_ANALYSIS.md  IMPLEMENTATION.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  ruff.toml  run_backfill_loop.sh
deploy/: .dockerignore  Dockerfile  QUICKSTART.md  README.md  build.sh
deploy/grafana/: annotations.csv  dashboard.json
deploy/k8s/: deployment.yaml  namespace.yaml
deploy/queries/B_relay/: 1_relay_market_share.sql  2_relay_market_share.sql
deploy/queries/C_builder/: 1_builder_market_share_number_of_blocks.sql  2_builder_market_share_number_of_blocks.sql  3_builder_market_share_eth_profit.sql  4_builder_market_share_eth_profit.sql
deploy/queries/D_value_and_profitability/: 11_negative_total_value_blocks.sql  2_total_value_distribution_percent_1.sql  3_average_total_value.sql  5_proposer_vs_builder_profit.sql  6_proposer_share_per_builder.sql  7_overbid_distribution.sql  8_proposer_share_of_total_value.sql  9_negative_total_value_blocks_mev_boost.sql
deploy/queries/builder/: profit_rolling.sql
deploy/queries/distribution/: total_value_histogram_timescale.sql
deploy/queries/market_share/: relay.sql  relay_rolling.sql
deploy/queries/profit/: top_negative_blocks.sql
scripts/: extract_db_labels.py  fetch_proposer_labels.py  scrape_etherscan_labels.py
src/: __init__.py  live.py
src/analysis/: __init__.py  backfill.py  backfill_missing_mev.py  backfill_v3.py  builder_name.py  constants.py  db.py  live.py  models.py
src/analysis/queries/: README.md  avg_profit_by_block_type.sql  builder_market_share.sql  builder_market_share_rolling.sql  builder_profit.sql  builder_profit_rolling.sql  mev_boost_market_share.sql  mev_boost_market_share_rolling.sql  negative_blocks_pct.sql  overbidding_builders.sql  proposer_vs_builder_profit.sql  proposer_vs_builder_profit_rolling.sql  relay_market_share.sql  relay_market_share_rolling.sql  total_value_histogram_timescale.sql
src/analysis/queries/builder/: market_share.sql  market_share_rolling.sql  negative_blocks_pct.sql  overbidding.sql  profit.sql
src/analysis/queries/grafana/: builder_profit_split_time.sql  relay_market_time.sql  relay_market_total.sql
src/analysis/queries/integrity/: README.md  block_gaps_detailed.sql  block_type_breakdown_timeseries.sql  blocks_per_builder_timeseries.sql  blocks_per_relay_timeseries.sql  data_quality_summary.sql  hourly_ingestion_rate.sql  missing_analysis_count.sql  missing_analysis_records.sql  missing_blocks_count.sql  missing_blocks_daily.sql  missing_proposer_balance_count.sql  missing_relay_data_count.sql  relay_availability_timeseries.sql  relay_volume_and_gaps.sql
src/analysis/queries/market_share/: mev_boost.sql  mev_boost_rolling.sql
src/analysis/queries/profit/: avg_by_block_type.sql  builder_profit_split.sql  negative_blocks_pct.sql  proposer_vs_builder.sql  proposer_vs_builder_rolling.sql
src/analysis/queries/relay/: daily_coverage_stats.sql
src/dashboard/: README.md  __init__.py  colors.py  dashboard.py  generate.py  panels.py  queries.py  update_dashboard.py
src/dashboard/queries/A_general/: 1_mev_boost_market_share.sql  2_mev_boost_market_share.sql
src/dashboard/queries/B_relay/: 1_relay_market_share.sql  2_relay_market_share.sql
src/dashboard/queries/C_builder/: 3_builder_market_share_eth_profit.sql  (+3 more)
src/data/: __init__.py  backfill.py  constants.py  db.py  live_models.py  models.py
src/data/adjustments/: __init__.py  backfill.py  db.py  models.py
src/data/blocks/: README.md  __init__.py  backfill.py  db.py  live.py  models.py
src/data/builders/: __init__.py  backfill.py  backfill_extra_builders.py  db.py  known_builder_addresses.py  live.py  models.py
src/data/miners/: README.md  __init__.py  backfill.py  db.py  models.py
src/data/proposers/: README.md  __init__.py  backfill.py  backfill_extra_builders.py  check_status.py  db.py  known_builder_addresses.py  live.py  models.py
src/data/relay/: backfill.py  constants.py  db.py
src/data/relays/: __init__.py  analyze_gaps.py  backfill.py  backfill_beaconchain.py  backfill_beaconchain_candidate.py  backfill_missed_mev.py  backfill_titan_slots.py  constants.py  db.py  debug_titan_gaps.py  detect_missed_mev.py  gap_detection.py  live.py  models.py  retry_gaps.py
src/helpers/: __init__.py  backfill.py  config.py  constants.py  db.py  db_mixins.py  http.py  http_models.py  logging.py  models.py  parsers.py  progress.py  rpc.py  rpc_models.py
tests/: __init__.py  base_integrity.py  conftest.py  docker-compose.test.yml  test_analysis_integrity.py  test_blocks_integrity.py  test_builder_name_extra_data.py  test_builders_integrity.py  test_data_flow_integrity.py  test_edge_cases.py  test_example.py  test_helpers.py  test_proposers_integrity.py  test_relays_integrity.py
tests/analysis/: test_analysis_and_adjustment_models.py  test_analysis_integrity.py  test_builder_name_extra_data.py
tests/dashboard/: test_colors.py  test_generate.py  test_panels.py  test_queries.py  test_update_dashboard.py
tests/helpers/: __init__.py  test_backfill.py  test_config.py  test_db_helpers.py  test_db_operations.py  test_helper_models.py  test_helpers.py  test_http.py  test_http_models.py  test_logging.py  test_progress.py  test_rpc_client.py  test_rpc_helpers.py  test_rpc_models.py
typings/grafanalib/: _gen.pyi  azuredataexplorer.pyi  azuremonitor.pyi  cloudwatch.pyi  core.pyi  elasticsearch.pyi  formatunits.pyi  humio.pyi  influxdb.pyi  opentsdb.pyi  prometheus.pyi  validators.pyi  weave.pyi  zabbix.pyi
(+17 files in other folders)
